<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.iraqsoft.mawgood.viewmodels.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/semiWhite"
        tools:context=".views.fragments.LoginFragment"
        android:layoutDirection="rtl">


        <TextView
            android:id="@+id/loginTextView"
            style="@style/cairo_bold_24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_24sdp"
            android:text="@string/login"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/nameTextView"
            style="@style/cairo_regular_16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/user_name"
            app:layout_constraintStart_toStartOf="@+id/loginTextView"
            app:layout_constraintTop_toBottomOf="@+id/loginTextView" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailInputLayout"
            style="@style/LoginTextInputLayoutStyle"
            android:layout_width="0dp"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:paddingBottom="0dp"
            app:boxBackgroundColor="@android:color/white"
            app:boxStrokeColor="@color/borderWhite"
            app:errorEnabled="true"
            app:hintEnabled="false"
            app:hintTextColor="@color/gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nameTextView">


            <com.google.android.material.textfield.TextInputEditText
                style="@style/cairo_regular_16"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/iraq_soft_2021"
                android:textColorHint="@color/blackGray"
                android:text="@={viewModel.userName}"
                android:textAlignment="viewStart"
                android:textColor="@color/black"
                android:textSize="@dimen/_10ssp" />

        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/passwordTextView"
            style="@style/cairo_regular_16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/password"
            app:layout_constraintStart_toStartOf="@+id/nameTextView"
            app:layout_constraintTop_toBottomOf="@+id/emailInputLayout" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordInputLayout"
            style="@style/LoginTextInputLayoutStyle"
            android:layout_width="0dp"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:paddingBottom="0dp"
            app:boxStrokeColor="@color/borderWhite"
            app:errorEnabled="true"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="@+id/emailInputLayout"
            app:layout_constraintStart_toStartOf="@+id/emailInputLayout"
            app:layout_constraintTop_toBottomOf="@+id/passwordTextView"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="#605E5E"
            >


            <com.google.android.material.textfield.TextInputEditText
                style="@style/cairo_regular_16"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/enter_the_password"
                android:textAlignment="viewStart"
                android:textColorHint="@color/blackGray"
                android:text="@={viewModel.password}"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textSize="@dimen/_10ssp" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/loginButton"
            style="@style/cairo_bold_16"
            android:layout_width="0dp"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/background_blue"
            android:text="@string/login_button"
            app:layout_constraintEnd_toEndOf="@+id/passwordInputLayout"
            app:layout_constraintStart_toStartOf="@+id/passwordInputLayout"
            app:layout_constraintTop_toBottomOf="@+id/passwordInputLayout" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>