<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.iraqsoft.mawgood.presentation.activities.mainActivity.MainFragmentViewModel" />
    </data>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/semiWhite"
        tools:context=".presentation.fragments.enterYourCodeFragment.EnterYourCodeFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:background="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/fragmentNameTextView"
                style="@style/cairo_bold_16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_15sdp"
                android:text="@string/configs"
                android:textColor="@color/semiBlack"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/backImageView"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/backImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10sdp"
                app:layout_constraintBottom_toBottomOf="@+id/fragmentNameTextView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/fragmentNameTextView"
                app:srcCompat="@drawable/ic_back" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <TextView
            android:id="@+id/loginTextView"
            style="@style/cairo_bold_24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:text="@string/enter_code"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />

        <TextView
            android:id="@+id/yourCodeTextView"
            style="@style/cairo_regular_16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/your_code"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintEnd_toEndOf="@+id/loginTextView"
            app:layout_constraintTop_toBottomOf="@+id/loginTextView" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailInputLayout"
            style="@style/LoginTextInputLayoutStyle"
            android:layout_width="0dp"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:paddingBottom="0dp"
            app:boxStrokeColor="@color/borderWhite"
            app:errorEnabled="true"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="@+id/yourCodeTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/yourCodeTextView">


            <com.google.android.material.textfield.TextInputEditText
                style="@style/cairo_light_14"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@={viewModel.enteredCode}"
                android:textColorHint="@color/blackGray"
                android:hint="@string/enter_your_code"
                android:textColor="@color/black"
                android:textSize="@dimen/_10ssp" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/cacheButton"
            style="@style/cairo_bold_16"
            android:layout_width="0dp"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/background_blue"
            android:text="@string/login_button"
            app:layout_constraintEnd_toEndOf="@+id/emailInputLayout"
            app:layout_constraintStart_toStartOf="@+id/emailInputLayout"
            app:layout_constraintTop_toBottomOf="@+id/emailInputLayout" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/sync"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:padding="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/background_blue"
            android:textColor="@color/white"
            android:visibility="gone"
            app:srcCompat="@drawable/ic_baseline_sync_24"
            app:layout_constraintEnd_toEndOf="@+id/cacheButton"
            app:layout_constraintTop_toBottomOf="@+id/cacheButton" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/employees"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:background="@drawable/background_blue"
            app:srcCompat="@drawable/ic_baseline_person_24"
            android:visibility="gone"
            android:padding="@dimen/_10sdp"
            app:layout_constraintBottom_toBottomOf="@+id/sync"
            app:layout_constraintStart_toStartOf="@+id/cacheButton"
            app:layout_constraintTop_toTopOf="@+id/sync" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/syncNeededEmployees"
            android:visibility="gone"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/sync"
            app:layout_constraintStart_toStartOf="@+id/employees"
            app:layout_constraintTop_toBottomOf="@+id/sync" />

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/circularProgressIndicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="gone"
            android:elevation="@dimen/_10sdp"
            app:indicatorColor="@color/blue"
            app:indicatorSize="@dimen/_40sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:trackThickness="@dimen/_3sdp" />


    </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>