<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/semiWhite">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/whiteBorderImageView"
        android:layout_width="@dimen/_110sdp"
        android:layout_height="@dimen/_110sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_marginBottom="@dimen/_30sdp"
        android:src="@drawable/circle_white"
        app:layout_constraintBottom_toBottomOf="@+id/customClock"
        app:layout_constraintEnd_toEndOf="@+id/customClock"
        app:layout_constraintStart_toStartOf="@+id/customClock"
        app:layout_constraintTop_toTopOf="@+id/customClock" />

    <com.imankur.analogclockview.AnalogClock
        android:id="@+id/customClock"
        android:layout_width="@dimen/_90sdp"
        android:layout_height="@dimen/_90sdp"
        android:layout_marginTop="@dimen/_20sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBar"
        app:showSecondHand="true"
        />

    <DigitalClock
        android:id="@+id/timeTextView"
        style="@style/cairo_bold_24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:fontFamily="@font/cairo_bold"
        app:layout_constraintEnd_toEndOf="@+id/loginTypeTextView"
        app:layout_constraintStart_toStartOf="@+id/loginTypeTextView"
        app:layout_constraintTop_toBottomOf="@+id/whiteBorderImageView" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/fragmentNameTextView"
            style="@style/cairo_bold_16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_10sdp"
            android:text="@string/main"
            android:textColor="@color/semiBlack"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/settingsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            app:layout_constraintBottom_toBottomOf="@+id/fragmentNameTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/fragmentNameTextView"
            app:srcCompat="@drawable/ic_settings" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <TextView
        android:id="@+id/loginTypeTextView"
        style="@style/cairo_bold_16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/login_type"
        android:textColor="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timeTextView" />


    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewFingerPrint"
        android:layout_width="@dimen/_140sdp"
        android:layout_height="@dimen/_140sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:elevation="@dimen/_10sdp"
        app:cardCornerRadius="@dimen/_15sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cardViewFacePrint"
        app:layout_constraintTop_toBottomOf="@+id/loginTypeTextView">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            >

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/fingerPrintImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_25sdp"
                app:layout_constraintBottom_toTopOf="@+id/fingerPrintTextView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_fingerprint" />

            <TextView
                android:id="@+id/fingerPrintTextView"
                style="@style/cairo_bold_16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_20sdp"
                android:text="@string/finger_print"
                android:textColor="@color/semiBlack"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/fingerPrintImageView"
                app:layout_constraintStart_toStartOf="@+id/fingerPrintImageView" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewFacePrint"
        android:layout_width="@dimen/_140sdp"
        android:layout_height="@dimen/_140sdp"
        android:elevation="10dp"
        app:cardCornerRadius="@dimen/_15sdp"
        app:layout_constraintBottom_toBottomOf="@+id/cardViewFingerPrint"
        app:layout_constraintEnd_toStartOf="@+id/cardViewFingerPrint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cardViewFingerPrint">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            >

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/facePrintImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_25sdp"
                app:layout_constraintBottom_toTopOf="@+id/facePrintTextView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_face" />

            <TextView
                android:id="@+id/facePrintTextView"
                style="@style/cairo_bold_16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_20sdp"
                android:text="@string/face_print"
                android:textColor="@color/semiBlack"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/facePrintImageView"
                app:layout_constraintStart_toStartOf="@+id/facePrintImageView" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>







</androidx.constraintlayout.widget.ConstraintLayout>